# AGS-Game-Project

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Doxyfile  README.md  config.h.in  log.cpp  main.cpp
client/: CMakeLists.txt  main.cpp
client/include/: log.hpp
client/include/Box2D/Collision/: b2BroadPhase.h  b2DynamicTree.h
client/include/Box2D/Common/: b2Settings.h
client/include/Box2D/Dynamics/: b2Body.h  b2ContactManager.h  b2Fixture.h  b2World.h
client/include/Box2D/Dynamics/Contacts/: b2ChainAndCircleContact.h  b2ChainAndPolygonContact.h  b2CircleContact.h  b2Contact.h  b2EdgeAndCircleContact.h  b2EdgeAndPolygonContact.h  b2PolygonAndCircleContact.h  b2PolygonContact.h
client/include/Box2D/Dynamics/Joints/: b2DistanceJoint.h  b2FrictionJoint.h  b2GearJoint.h  b2Joint.h  b2MotorJoint.h  b2MouseJoint.h  b2PrismaticJoint.h  b2PulleyJoint.h  b2RevoluteJoint.h  b2RopeJoint.h  b2WeldJoint.h  b2WheelJoint.h
client/include/inputio/: keybinds.hpp  textInput.hpp  textinput.hpp
client/include/player/: platform.hpp  player.hpp
client/include/render/: programLoader.hpp  programloader.hpp  renderer.hpp  texture.hpp
client/include/scene/: debugoverlayscene.hpp  gamescene.hpp  menuscene.hpp  scene.hpp  scenemanager.hpp
client/include/timing/: timer.hpp
client/resources/: CMakeLists.txt
client/resources/shaders/: colourfragment.glsl  colourvertex.glsl  textfragment.glsl  texturefragment.glsl  texturevertex.glsl  textvertex.glsl
client/src/: CMakeLists.txt
client/src/Box2D/: NOTICE
client/src/Box2D/Collision/: b2BroadPhase.cpp  b2DynamicTree.cpp
client/src/Box2D/Common/: b2Settings.cpp  b2Stat.cpp
client/src/Box2D/Dynamics/: b2Body.cpp  b2ContactManager.cpp  b2Fixture.cpp  b2World.cpp
client/src/Box2D/Dynamics/Contacts/: b2ChainAndCircleContact.cpp  b2ChainAndPolygonContact.cpp  b2CircleContact.cpp  b2Contact.cpp  b2EdgeAndCircleContact.cpp  b2EdgeAndPolygonContact.cpp  b2PolygonAndCircleContact.cpp  b2PolygonContact.cpp
client/src/Box2D/Dynamics/Joints/: b2DistanceJoint.cpp  b2FrictionJoint.cpp  b2GearJoint.cpp  b2Joint.cpp  b2MotorJoint.cpp  b2MouseJoint.cpp  b2PrismaticJoint.cpp  b2PulleyJoint.cpp  b2RevoluteJoint.cpp  b2RopeJoint.cpp  b2WeldJoint.cpp  b2WheelJoint.cpp
client/src/inputio/: keybinds.cpp  textInput.cpp  textinput.cpp
client/src/main/: main.cpp
client/src/player/: platform.cpp  player.cpp
client/src/render/: programLoader.cpp  renderer.cpp  texture.cpp
client/src/scene/: debugoverlayscene.cpp  gamescene.cpp  menuscene.cpp  scene.cpp  scenemanager.cpp
client/src/timing/: timer.cpp
client/test/: CMakeLists.txt
client/test/Box2D/: BlockAllocatorTests.cpp  BodyContactsTests.cpp  CMakeLists.txt  CallbackTests.cpp  CommonTests.cpp  ConfinementTests.cpp  ConservationTests.cpp  CopyTests.cpp  FreeListTests.cpp  FunctionTests.cpp  HelloWorldTests.cpp  IntrusiveListTests.cpp  MultipleParticleSystemsTests.cpp  ProtectableAllocator.cpp  ProtectableAllocator.h  ProtectableAllocator.hpp  TrackedBlockTests.cpp
cmake/: internal_utils.cmake
cmake/Modules/: FindFreeImage.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindGTest.cmake  FindLibRT.cmake  FindLiquidFun.cmake  FindLua.cmake
render/: CMakeLists.txt  programLoader.cpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
scripts/: agsgame_client.launch  agsgame_client_test_unix.launch  agsgame_client_test_windows.launch  agsgame_configure_unix.launch  agsgame_configure_windows.launch  agsgame_doxygen_unix.launch  agsgame_doxygen_windows.launch  build.sh  build_mingw.bat  client.launch  eclipse.sh  eclipse_mingw.bat  run.bat  run.sh  test.bat  test.sh
shaders/: colourfragment.glsl  colourvertex.glsl  textfragment.glsl.bak  texturefragment.glsl  texturevertex.glsl  textvertex.glsl  textvertex.glsl.bak
